mount: fix typo in mount.8
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2007,7 +2007,7 @@ to correspond to the file
 and then mount this device on
 .IR /mnt .
 
-This type of mount knows about three options, namely
+This type of mount knows about four options, namely
 .BR loop ", " offset ", " sizelimit " and " encryption ,
 that are really options to
 .BR \%losetup (8).
