losetup: fix typo in losetup.8
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -87,7 +87,7 @@ show status of all loop devices associated with given
 the data start is moved \fIoffset\fP bytes into the specified file or
 device
 .IP "\fB\-\-sizelimit \fIlimit\fP"
-The data end is set to no more than \fIsizelimit\fP bytes after the data start.
+the data end is set to no more than \fIsizelimit\fP bytes after the data start
 .IP "\fB\-p, \-\-pass-fd \fInum\fP"
 read the passphrase from file descriptor with number
 .I num
