--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
+util-linux-ng 2.14-rc2
+* see docs/v2.14-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14-rc2-ChangeLog
+
 util-linux-ng 2.14-rc1
 * see docs/v2.14-ReleaseNotes or complete changelog at
- ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14-rc1-ChangeLog
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14-rc1-ChangeLog
 
 util-linux-ng 2.13
 
