mount: fix a small typo in mount.8
While working on french translation of the Linux Man Pages, I've found a
small typo in mount.8.

Only one wrong letter : the option "osyncis_o_sync" for XFS filesystem
is erroneously replaced by "osyncis_d_sync" (the previous option).

Signed-off-by: Christophe Blaess <Christophe@Blaess.fr>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1949,7 +1949,7 @@ must be mounted read-only or the mount will fail.
 Don't check for double mounted file systems using the file system uuid.
 This is useful to mount LVM snapshot volumes.
 .TP
-.B osyncisdsync
+.B osyncisosync
 Make O_SYNC writes implement true O_SYNC.  WITHOUT this option,
 Linux XFS behaves as if an
 .B osyncisdsync
