docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,12 +49,14 @@ CONTRIBUTORS:
       David Brownell <david-b@pacbell.net>
       David Miller <davem@davemloft.net>
       David Woodhouse <dwmw2@infradead.org>
+      Denis ChengRq <crquan@gmail.com>
       Dennis Gilmore <dennis@ausil.us>
       Dmitry V. Levin <ldv@altlinux.org>
       Flávio Leitner <fleitner@redhat.com>
       Frédéric Bothamy <frederic.bothamy@free.fr>
       Gabor Kelemen <kelemeng@gnome.hu>
       Gabriel Barazer <gabriel@oxeva.fr>
+      Gabriel Burt <gburt@novell.com>
       Hamish Coleman <hamish@zot.org>
       H. Peter Anvin <hpa@zytor.com>
       Imre Kaloz <kaloz@openwrt.org>
@@ -64,6 +66,7 @@ CONTRIBUTORS:
       Josep Puigdemont <josep.puigdemont@gmail.com>
       Justin B Rye <jbr@edlug.org.uk>
       KaiGai Kohei <kaigai@kaigai.gr.jp>
+      Kalev Soikonen <ksop@hot.ee>
       Kay Sievers <kay.sievers@vrfy.org>
       Kees Cook <kees.cook@canonical.com>
       Kunihiko IMAI <kimai@iodata.jp>
