docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -104,6 +104,7 @@ CONTRIBUTORS:
       Rajeev V. Pillai <rajeevvp@gmail.com>
       Ram Pai <linuxram@us.ibm.com>
       Randy Dunlap <randy.dunlap@oracle.com>
+      Ray Wang <wanglei1123@gmail.com>
       Robert Millan <rmh@aybabtu.com>
       Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>
       Samuel Thibault <samuel.thibault@ens-lyon.org>
