--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,12 @@
-util-linux-ng 2.14.1-rc1
-* see docs/v2.14-ReleaseNotes or complete changelog at
+util-linux-ng 2.14.1-rc2: Aug 22 2008
+* see docs/v2.14.1-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14.1-rc2-ChangeLog
+
+util-linux-ng 2.14.1-rc1: Aug 14 2008
+* see docs/v2.14.1-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14.1-rc1-ChangeLog
 
-util-linux-ng 2.14
+util-linux-ng 2.14: Jun 9 2008
 * see docs/v2.14-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14-ChangeLog
 
