--- a/fdisk/fdisk.8
+++ b/fdisk/fdisk.8
@@ -243,9 +243,11 @@ The option `dump partition table to file' is missing.
 .\" and many others.
 .SH "SEE ALSO"
 .BR cfdisk (8),
+.BR sfdisk (8),
 .BR mkfs (8),
 .BR parted (8),
-.BR sfdisk (8)
+.BR partprobe (8),
+.BR kpartx (8)
 .SH AVAILABILITY
 The fdisk command is part of the util-linux-ng package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
