mount: fix typo
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -658,7 +658,7 @@ since the last time it was modified.)
 .TP
 .B norelatime
 Do not use
-.B realatime
+.B relatime
 feature (e.g, for systems where the feature is enabled by default, for
 more details see mount options in /proc/mounts).
 .TP
