fdisk: fix man page typo
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/fdisk/fdisk.8
+++ b/fdisk/fdisk.8
@@ -52,7 +52,7 @@ The
 is usually /dev/sda, /dev/sdb or so. A device name refers to the entire disk.
 The old systems without libata (a library used inside the Linux kernel to
 support ATA host controllers and devices) make a difference between IDE and
-SCSI disks. In partition case a device name is /dev/hd* (IDE) or /dev/sd*
+SCSI disks. In such a case the device name will be /dev/hd* (IDE) or /dev/sd*
 (SCSI).
 
 The
