mount: remove spurious newline from mount.8
The man page display shows quote marks instead of being interpreted by the
.B statement and hidden away due to a spurious newline.

Signed-off-by: Mike Frysinger <vapier@gentoo.org>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -191,8 +191,7 @@ mounts under a given mountpoint.
 .br
 .B "mount --make-rprivate mountpoint"
 .br
-.B
-"mount --make-runbindable mountpoint"
+.B "mount --make-runbindable mountpoint"
 .br
 .RE
 .RE
